[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tethysapp-component_playground"
description =  "Playground for Tethys Component App development."
readme = "README.rst"

keywords = []
authors = [
    {name = "Shawn", email = "shawncrawley@gmail.com"},
]
classifiers = [
     "Environment :: Web Environment",
     "Framework :: Django",
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = ["version"]

dependencies = [
    "reactpy-django >=5.2.1, <6.0.0",
    "pandas",
    "numpy",
    "geopandas",
    "pyproj",
    "pytablericons",
    "simplepycons"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"tethysapp.component_playground" = [
    "templates/**/*",
    "public/**/*",
    "resources/**/*",
    "workspaces/**/*"
]